--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -12,9 +12,9 @@
             <div class="container center">
                 <div class="text">
                     <h1>
-                        <span>Aspiring</span>
-                        <span>Business</span>
-                        <span>Professional</span>
+                        <span>Berufsanwärter</span>
+                        <span>in der</span>
+                        <span>Geschäftswelt</span>
                     </h1>
                     <h5>High School Graduate in Commerce and Administration</h5>
                     <p>
