--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -216,8 +216,8 @@
                         <span class="gray-1">CNPSES & Chambre de Commerce</span>
                         <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
                         <p>
-                            Award for outstanding performance in Accounting, Business Economics & Political 
-                            Economy which is awarded to only 40 Students in Luxembourg each year
+                            Award for outstanding performance in Accounting, Business Economics & Political
+                             Economy which is awarded to only 40 Students in Luxembourg each year
                         </p>
 
                         <a href="/assets/pdf/CNPSES-certificat-GCC.pdf" class="normal-link" target="_blank">
@@ -242,7 +242,7 @@
                         <span class="gray-1">Jonk Entrepreneuren</span>
                         <span class="white-2">Trendiction SA | Job Shadow Event 2024</span>
                         <p>
-                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
+                            A voluntary event for students to visit a company for one day to gain entrepreneurship and career guidance
                         </p>
 
                         <a href="/assets/pdf/Trendiction-SA-Job-Shadow-Day.pdf" class="normal-link" target="_blank">
