--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -177,7 +177,7 @@
             <div class="container center">
                 <div class="text">
                     <h3>
-                        <span>Life long learning</span>
+                        <span>Lifelong learning</span>
                         <span>is essential to</span>
                         <span>succeed nowadays</span>
                     </h3>
@@ -201,10 +201,10 @@
                 <div class="column-list">
                     <div class="column-box">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">1GCC | Deserving Student 2023/24</span>
+                        <span class="white-2">1GCC | Élève méritant 2023/24</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior
+                            and exemplary behavior
                         </p>
 
                         <a href="/assets/pdf/1GCC-élève-méritant.pdf" class="normal-link" target="_blank">
@@ -227,10 +227,10 @@
 
                     <div class="column-box">
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">2GCC | Deserving Student 2022/23</span>
+                        <span class="white-2">2GCC | Élève méritant 2022/23</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior
+                            and exemplary behavior
                         </p>
 
                         <a href="/assets/pdf/2GCC-élève-méritant.pdf" class="normal-link" target="_blank">
@@ -266,7 +266,7 @@
                         <span class="gray-1">Jonk Entrepreneuren</span>
                         <span class="white-2">CLIK Marketing | Mini-Entreprise 2023</span>
                         <p>
-                            A programm that allowed Luxembourgish high school students to run a small company for a year, developing their entrepreneurial spirit and skills.
+                            A program that allowed Luxembourgish high school students to run a small company for a year, developing their entrepreneurial spirit and skills
                         </p>
 
                         <a href="/assets/pdf/Mini-Entreprise-CLIK-2023.pdf" class="normal-link" target="_blank">
@@ -1478,4 +1478,4 @@
     </div>
 </section>
 
-<%- include("../partials/footer.ejs") %>
+<%- include("../partials/footer-en.ejs") %>
