--- a/views/partials/navbar-de.ejs
+++ b/views/partials/navbar-de.ejs
@@ -12,7 +12,7 @@
                     <img class="language-btn" src="/assets/svg/logos/globe.svg" alt="Globe">
                     <ul class="dropdown-content">
                         <li><a href="/fr"><img src="/assets/svg/logos/fr.svg" alt="flag of the United Kingdom"><div>FR</div></a></li>
-                        <li><a href="/de"><img src="/assets/svg/logos/de.svg" alt="flag of France"> <div>DE</div></a></li>
+                        <li><a href="/en"><img src="/assets/svg/logos/gb.svg" alt="flag of France"> <div>EN</div></a></li>
                     </ul>
                 </div>
 
