--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -75,10 +75,10 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Degree | in Finance</span>
+                                <span class="white-2">Bachelor Abschluss im Finanzmanagement</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Spezialisiert auf Rechnungswesen, Finanzanalyse und Controlling mit einer 
+                                    soliden Grundlage in globalen Finanzen und Betriebswirtschaft.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -89,12 +89,13 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Master Degree | Finance</span>
+                                <span class="white-2">Master Abschluss im Finanzwesen</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Ich möchte mein Fachwissen im globalen Finanzwesen erweitern und plane, einen 
+                                    Master-Abschluss mit Schwerpunkt auf strategischem Finanzmanagement und 
+                                    Investitionsanalyse zu erwerben.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -105,7 +106,8 @@
                                 <span class="gray-1">CFA Institute</span>
                                 <span class="white-2">Chartered Financial Analyst</span>
                                 <p>
-                                    A program that is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment and financial professionals.
+                                    Ein Programm, das vom CFA Institute mit Sitz in den USA international für Investment- 
+                                    und Finanzfachleute angeboten wird.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -124,10 +126,15 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">Entry-level</span>
-                                <span class="white-2">Accountant</span>
+                                <span class="gray-1">Einsteiger</span>
+                                <span class="white-2">Buchhalter</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Ich beginne meine Laufbahn als Berufsanfängerin in der Buchhaltung und möchte 
+                                    eine solide Grundlage in den Bereichen Finanzmanagement, Rechnungslegungsgrundsätze 
+                                    und Compliance schaffen. Mein Ziel ist es, praktische Erfahrungen bei der Verwaltung 
+                                    von Finanzunterlagen, der Erstellung von Berichten und der Gewährleistung von 
+                                    Genauigkeit zu sammeln, um so die Voraussetzungen für weiterführende Aufgaben 
+                                    im Finanzwesen zu schaffen.
                                 </p>
                             </li>
                         </ul>
@@ -136,10 +143,13 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">Mid-level</span>
-                                <span class="white-2">In</span>
+                                <span class="gray-1">Mittlere Führungsposition</span>
+                                <span class="white-2">Bankangestellte</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Ich möchte mich als Bankangestellter auszeichnen, indem ich meinen Bachelor-Abschluss 
+                                    in Finanzwesen einsetze, um Kunden bei Finanzdienstleistungen zu unterstützen, Transaktionen 
+                                    zu verwalten und durch außergewöhnlichen Kundenservice und Finanzwissen zum Wachstum 
+                                    der Bank beizutragen.
                                 </p>
                             </li>
                         </ul>
@@ -148,10 +158,12 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">Higher Position</span>
-                                <span class="white-2">In </span>
+                                <span class="gray-1">Höhere Führungsposition</span>
+                                <span class="white-2">Investment Banker</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Auf der Grundlage meines fortgeschrittenen Studiums im Finanzwesen möchte ich Investmentbanker 
+                                    werden. Ich strebe die Leitung von Finanztransaktionen mit hohem Risiko an, einschließlich 
+                                    Fusionen und Übernahmen, Kapitalbeschaffung und strategische Beratungsdienste.
                                 </p>
                             </li>
                         </ul>
