--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -73,12 +73,12 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Degree | in Finance</span>
+                                <span class="white-2">Bachelor Degree | Finance</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Specialized in Accounting, Financial Analysis, and Controlling with a 
+                                    strong foundation in global finance and business administration
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -89,10 +89,10 @@
                                 <span class="gray-1">IU Hochschule</span>
                                 <span class="white-2">Master Degree | Finance</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Passionate about advancing my expertise in global finance, with plans to pursue 
+                                    a master's degree focused on strategic financial management and investment analysis.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -103,7 +103,8 @@
                                 <span class="gray-1">CFA Institute</span>
                                 <span class="white-2">Chartered Financial Analyst</span>
                                 <p>
-                                    A program that is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment and financial professionals.
+                                    A program that is a postgraduate professional certification offered internationally 
+                                    by the US-based CFA Institute to investment and financial professionals.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -125,7 +126,8 @@
                                 <span class="gray-1">Entry-level</span>
                                 <span class="white-2">Accountant</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Starting my career as an entry-level accountant, I am eager to develop a solid foundation 
+                                    in financial management, accounting principles, and compliance.
                                 </p>
                             </li>
                         </ul>
@@ -135,9 +137,12 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Mid-level</span>
-                                <span class="white-2">In</span>
+                                <span class="white-2">Bank Associate</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Driven to excel as a Bank Associate, leveraging my Bachelor's degree 
+                                    in Finance to assist clients with financial services, manage transactions, 
+                                    and contribute to the bank's growth through exceptional customer service 
+                                    and financial expertise
                                 </p>
                             </li>
                         </ul>
@@ -147,9 +152,11 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Higher Position</span>
-                                <span class="white-2">In </span>
+                                <span class="white-2">Investment Banker</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Building on my advanced studies in finance, my ultimate ambition is to become an Investment Banker. 
+                                    I aspire to lead high-stakes financial transactions, including mergers and acquisitions, capital raising, 
+                                    and strategic advisory services.
                                 </p>
                             </li>
                         </ul>
