--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -77,8 +77,9 @@
                                 <span class="gray-1">IU Hochschule</span>
                                 <span class="white-2">Bachelor Degree | in Finance</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Spécialisé dans la comptabilité, l'analyse financière et le contrôle de 
+                                    gestion, avec une base solide en finance globale et en administration 
+                                    des affaires.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -91,8 +92,9 @@
                                 <span class="gray-1">IU Hochschule</span>
                                 <span class="white-2">Master Degree | Finance</span>
                                 <p>
-                                    A distinction awarded to students with outstanding marks
-                                    and examplary behavior.
+                                    Passionné par le développement de mon expertise dans le domaine de la finance 
+                                    mondiale, j'ai l'intention d'obtenir un master axé sur la gestion financière 
+                                    stratégique et l'analyse des investissements.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -105,7 +107,8 @@
                                 <span class="gray-1">CFA Institute</span>
                                 <span class="white-2">Chartered Financial Analyst</span>
                                 <p>
-                                    A program that is a postgraduate professional certification offered internationally by the US-based CFA Institute to investment and financial professionals.
+                                    A program that is a postgraduate professional certification offered internationally 
+                                    by the US-based CFA Institute to investment and financial professionals.
                                 </p>
                                 <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
@@ -127,7 +130,9 @@
                                 <span class="gray-1">Débutant</span>
                                 <span class="white-2">Comptable</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Commençant ma carrière en tant que comptable débutant, je suis impatient 
+                                    d'acquérir une base solide en gestion financière, en principes comptables 
+                                    et en conformité.
                                 </p>
                             </li>
                         </ul>
@@ -136,10 +141,14 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">Mid-level</span>
-                                <span class="white-2">In</span>
+                                <span class="gray-1">Niveau Intermédiaire</span>
+                                <span class="white-2">Associé de Banque</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    Je suis motivé pour exceller en tant qu'employé de banque, en mettant 
+                                    à profit ma licence en finance pour aider les clients à obtenir des services 
+                                    financiers, gérer les transactions et contribuer à la croissance de la 
+                                    banque grâce à un service à la clientèle exceptionnel et à une 
+                                    expertise financière.
                                 </p>
                             </li>
                         </ul>
@@ -148,10 +157,12 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">Higher Position</span>
-                                <span class="white-2">In </span>
+                                <span class="gray-1">Niveau Supérieur</span>
+                                <span class="white-2">Banquier d'Affaires</span>
                                 <p>
-                                    I have interested in the field of accounting.
+                                    En m'appuyant sur mes études supérieures en finance, mon ambition ultime est de devenir 
+                                    banquier d'affaires. J'aspire à diriger des transactions financières à fort enjeu, notamment 
+                                    des fusions et acquisitions, des levées de fonds, et des services de conseil stratégique.
                                 </p>
                             </li>
                         </ul>
