--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -131,10 +131,7 @@
                                 <p>
                                     Ich beginne meine Laufbahn als Berufsanfängerin in der Buchhaltung und möchte 
                                     eine solide Grundlage in den Bereichen Finanzmanagement, Rechnungslegungsgrundsätze 
-                                    und Compliance schaffen. Mein Ziel ist es, praktische Erfahrungen bei der Verwaltung 
-                                    von Finanzunterlagen, der Erstellung von Berichten und der Gewährleistung von 
-                                    Genauigkeit zu sammeln, um so die Voraussetzungen für weiterführende Aufgaben 
-                                    im Finanzwesen zu schaffen.
+                                    und Compliance schaffen.
                                 </p>
                             </li>
                         </ul>
@@ -144,7 +141,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Mittlere Führungsposition</span>
-                                <span class="white-2">Bankangestellte</span>
+                                <span class="white-2">Bankangestellter</span>
                                 <p>
                                     Ich möchte mich als Bankangestellter auszeichnen, indem ich meinen Bachelor-Abschluss 
                                     in Finanzwesen einsetze, um Kunden bei Finanzdienstleistungen zu unterstützen, Transaktionen 
@@ -159,7 +156,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">Höhere Führungsposition</span>
-                                <span class="white-2">Investment Banker</span>
+                                <span class="white-2">Investmentbanker</span>
                                 <p>
                                     Auf der Grundlage meines fortgeschrittenen Studiums im Finanzwesen möchte ich Investmentbanker 
                                     werden. Ich strebe die Leitung von Finanztransaktionen mit hohem Risiko an, einschließlich 
