--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -75,13 +75,13 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Degree | in Finance</span>
+                                <span class="white-2">Bachelor Degree | Finance</span>
                                 <p>
                                     Spécialisé dans la comptabilité, l'analyse financière et le contrôle de 
                                     gestion, avec une base solide en finance globale et en administration 
                                     des affaires.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -96,7 +96,7 @@
                                     mondiale, j'ai l'intention d'obtenir un master axé sur la gestion financière 
                                     stratégique et l'analyse des investissements.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
