--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -693,7 +693,7 @@
                                     <li>Fähigkeit, Finanzdaten zu verwalten und zu interpretieren, unterstützende Funktionen in den Bereichen Rechnungsprüfung, Finanzanalyse und Buchführung.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -727,7 +727,7 @@
                                     <li>Entwicklung ausgeprägter schriftlicher Kommunikationsfähigkeiten, die auf den geschäftlichen Kontext zugeschnitten sind und für die Kommunikation mit Kunden, den formellen Schriftverkehr und die interne Dokumentation unerlässlich sind.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -761,7 +761,7 @@
                                     <li>Fähig, organisatorische Aufgaben zu koordinieren und zu unterstützen, wertvoll für Projektmanagement, Büroverwaltung und betriebliche Effizienz im Finanzbereich.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -795,7 +795,7 @@
                                     <li>Vorbereitet auf die digitalen Aspekte des Arbeitslebens, mit Fähigkeiten zur Verwaltung von Finanzdatenbanken, Cybersicherheit und digitaler Kommunikation.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -986,7 +986,7 @@
                                         und professionelle Dokumente zu erstellen, die Finanzvorgänge und Entscheidungsprozesse unterstützen.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1025,7 +1025,7 @@
                                         zu ermöglichen, die Finanzvorgänge oder Kundeninteraktionen rationalisieren können.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1153,7 +1153,7 @@
                                         Form für die Beteiligten erleichtern</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1167,8 +1167,6 @@
                             </div>
                         </div>
                     </div>
-
-                    
 
                     <div class="column-box">
                         <div class="accordion-item">
@@ -1193,7 +1191,7 @@
                                         Relationship Management) und der Bestandskontrolle.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1229,7 +1227,7 @@
                                         eine effektive Kommunikation mit Kunden und Teammitgliedern an verschiedenen Standorten zu gewährleisten.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1266,7 +1264,7 @@
                                         verbessern.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1303,7 +1301,7 @@
                                         zu verbessern.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1340,7 +1338,7 @@
                                         und Veröffentlichungen für Finanz- und Geschäftszwecke.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
@@ -1378,7 +1376,7 @@
                                         nützlich sein können.</li>
                                 </ul>
 
-                                <span class="gray-2">Technischer Stapel</span>
+                                <span class="gray-2">Technologiestapel</span>
 
                                 <div class="tech-list">
                                     <div class="tooltip">
