--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -13,7 +13,7 @@
                 <div class="text">
                     <h1>
                         <span>Aspirant</span>
-                        <span>Professional du</span>
+                        <span>Professionnel du</span>
                         <span>Monde des Affaires</span>
                     </h1>
                     <h5>Diplôme d'études secondaires en commerce et administration</h5>
