--- a/views/pages/terms-fr.ejs
+++ b/views/pages/terms-fr.ejs
@@ -2,7 +2,7 @@
 <body>
     <header>
         <div class="header-wrapper">
-            <a href="/en" class=" header-container cv-logo">
+            <a href="/fr" class=" header-container cv-logo">
                 CV
             </a>
         </div>
