--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -343,7 +343,7 @@
                             <div class="accordion-item">
                                 <button class="accordion-header" aria-expanded="false">
                                     <div class="accordion-container">
-                                        <span class="white-2">Économe Politique</span>
+                                        <span class="white-2">Économie Politique</span>
                                     </div>
     
                                     <div class="accordion-container">
