--- a/public/css/base.css
+++ b/public/css/base.css
@@ -63,6 +63,10 @@ h4, .title {
     font-size: var(--font-size-h4);
 }
 
+.title {
+    color: var(--color-gray);
+}
+
 .title-1, .white-2 {
     font-weight: var(--font-weight-medium);
 }
