--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -451,8 +451,7 @@
                         secteurs. Dans une société de production de marbre, j'ai amélioré mes capacités d'organisation 
                         et de service à la clientèle en aidant aux ventes et en rationalisant les tâches administratives. 
                         Mon stage en pharmacie m'a permis de développer mon sens du détail et mes compétences en matière 
-                        de gestion des stocks. de gestion des stocks. Ces expériences m'ont donné des bases solides en 
-                        matière d'organisation et de service à la clientèle.
+                        de gestion des stocks. Ces expériences m'ont donné des bases solides en matière d'organisation et de service à la clientèle.
                     </p>
                 </div>
             </div>
