--- a/public/css/components.css
+++ b/public/css/components.css
@@ -269,8 +269,8 @@ span {
     align-items: center;
     align-content: center;
     gap: var(--spacing-small);
-    margin-top: var(--spacing-large);
-    margin-bottom: var(--spacing-medium);
+    margin-top: var(--spacing-xlarge);
+    margin-bottom: var(--spacing-xlarge);
 }
 
 .tooltip {
