--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -129,7 +129,7 @@
                                 <span class="gray-1">Einsteiger</span>
                                 <span class="white-2">Buchhalter</span>
                                 <p>
-                                    Ich beginne meine Laufbahn als Berufsanfängerin in der Buchhaltung und möchte 
+                                    Ich beginne meine Laufbahn als Berufsanfänger in der Buchhaltung und möchte 
                                     eine solide Grundlage in den Bereichen Finanzmanagement, Rechnungslegungsgrundsätze 
                                     und Compliance schaffen.
                                 </p>
